ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: albumui
    app.kubernetes.io/component: albumui
    app.kubernetes.io/instance: albumui
  name: albumui
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: albumui
  strategy: {}
  template:
    metadata:
      labels:
        deployment: albumui
    spec:
      containers:
      - image: 'image-registry.openshift-image-registry.svc:5000/bgdemo/albumui:latest'
        name: albumui
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
