ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: albumui
    app.kubernetes.io/component: albumui
    app.kubernetes.io/instance: albumui
  name: albumui
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deployment: albumui
