ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: albumui
    app.kubernetes.io/component: albumui
    app.kubernetes.io/instance: albumui
  name: albumui
spec:
  alternateBackends:
  - kind: Service
    name: blue-albumui
    weight: 0
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: albumui
    weight: 100
status: {}
